# beddel-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  TOOLS-MAIN.md  pyproject.toml  requirements-dev.txt
docs/: brief.md  next_step.md
docs/architecture/: 1-introduction.md  10-rest-api-spec.md  11-database-schema.md  12-source-tree.md  13-infrastructure-and-deployment.md  14-error-handling-strategy.md  15-coding-standards.md  16-test-strategy-and-standards.md  17-security.md  18-lessons-learned-integration.md  19-checklist-results-report.md  2-high-level-architecture.md  20-next-steps.md  3-tech-stack.md  4-data-models.md  5-components.md  6-port-interfaces.md  7-external-apis.md  8-core-workflows.md  9-executioncontext-wiring-contract.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  repository-strategy.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: 1-goals-and-background-context.md  10-checklist-results-report.md  11-next-steps.md  2-requirements.md  3-technical-assumptions.md  4-epic-list.md  5-epic-1-adaptive-core-engine-project-foundation.md  6-epic-2-compositional-primitives.md  7-epic-3-observability-integration.md  8-epic-4-adaptive-execution-patterns-post-mvp.md  9-epic-5-agent-autonomy-safety-post-mvp.md  change-log.md  checklist-results-report.md  epic-details.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.yaml-parser.md  1.2.variable-resolver.md  1.3.async-executor.md  1.4.primitive-registry.md  2.1.llm-primitive.md  2.2.llm-streaming.md  2.3.chat-primitive.md  2.4.output-generator.md  2.5.call-agent.md  2.6.guardrail.md  2.7.tool-primitive.md  3.1.litellm-adapter.md  3.2.structured-output.md  3.3.provider-config.md  4.1.lifecycle-hooks.md  4.2.otel-tracing.md  5.1.fastapi-handler.md  5.2.sse-streaming-adapter.md  5.3.example-app-and-docs.md  6.1.streaming-first-execution.md
examples/: adk_agent_with_beddel.py  chat-with-guardrail.yaml  email-classifier.yaml  imagen-generate.yaml  local-llm-chatbot.yaml  research-pipeline.yaml  run_imagen.py
examples/tools/: __init__.py  imagen_tool.py
src/beddel/: __init__.py  constants.py  error_codes.py  setup.py
src/beddel-py/: ARCHITECT-REVIEW-PROMPT.md  README.md  STUCK.md  TASK.md  pyproject.toml
src/beddel-py/examples/: __init__.py  fastapi_app.py
src/beddel-py/examples/workflows/: simple.yaml  streaming.yaml
src/beddel-py/src/beddel/: __init__.py
src/beddel-py/src/beddel/adapters/: __init__.py  hooks.py  litellm.py  provider_config.py  structured.py  tracing.py
src/beddel-py/src/beddel/domain/: __init__.py  executor.py  models.py  parser.py  ports.py  registry.py  resolver.py
src/beddel-py/src/beddel/integrations/: __init__.py  fastapi.py  sse.py
src/beddel-py/src/beddel/primitives/: __init__.py  call_agent.py  chat.py  guardrail.py  llm.py  output.py  tool.py
src/beddel-py/tests/: conftest.py
src/beddel-py/tests/fixtures/workflows/: multi_step.yaml  nested_agent.yaml  simple.yaml
src/beddel-py/tests/integration/: test_example_app.py
src/beddel-py/tests/unit/adapters/: test_hooks.py  test_litellm.py  test_provider_config.py  test_structured.py  test_tracing.py
src/beddel-py/tests/unit/domain/: test_executor_stream.py  test_models_events.py
src/beddel-py/tests/unit/integrations/: test_fastapi.py  test_sse.py
src/beddel-py/tests/unit/primitives/: test_call_agent.py  test_chat.py  test_guardrail.py  test_llm.py  test_output.py  test_tool.py
tests/: _helpers.py  conftest.py  fixtures  test_a2a_server.py  test_deprecation_warnings.py  test_setup.py
tests/adapters/: test_agent_adapter_deprecation.py  test_approval.py  test_budget_enforcer.py  test_circuit_breaker.py  test_claude_adapter.py  test_codex_adapter.py  test_composite_memory.py  test_decision_store.py  test_deprecation_compat.py  test_event_store.py  test_github_auth.py  test_hooks.py  test_index_store.py  test_kiro_cli.py  test_knowledge_provider.py  test_langfuse_tracer.py  test_litellm_adapter.py  test_mcp_client.py  test_mcp_schema_validator.py  test_memory_provider.py  test_openclaw_adapter.py  test_otel_adapter.py  test_pii_middleware.py  test_pii_tokenizer.py  test_provider_integration_deprecation.py  test_state_store.py  test_tier_router.py
tests/cli/: test_commands_index.py  test_config.py  test_config_llm_provider.py  test_config_set_llm.py  test_connect.py  test_import_guards.py  test_index_api_endpoints.py  test_kit_commands.py  test_kit_export.py  test_kit_flow_commands.py  test_save_wizard_config.py  test_serve_mcp_cli.py  test_setup_command.py  test_tool_flags.py  test_tool_merge.py
tests/domain/: test_agent_delegation.py  test_agent_deps.py  test_agent_port.py  test_approval_models.py  test_approval_port.py  test_durable_strategy.py  test_error_codes.py  test_errors.py  test_executor.py  test_executor_a2ui.py  test_goal_strategy.py  test_kit_dependencies.py  test_kit_models.py  test_kit_namespace.py  test_models.py  test_parallel_strategy.py  test_parser.py  test_ports.py  test_reflection_strategy.py  test_registry.py  test_resolver.py  test_skill.py  test_state_persistence.py  test_step_filter.py  test_tool_declaration.py  test_tracing_utils.py
tests/integration/: __init__.py  test_agui_adapter.py  test_agui_endpoint.py  test_agui_mapping.py  test_circuit_breaker.py  test_coordination.py  test_dashboard_bridge.py  test_dashboard_history.py  test_dashboard_inspector.py  test_dashboard_router.py  test_decision_runtime.py  test_durable_execution.py  test_event_driven.py  test_examples.py  test_executor_e2e.py  test_fastapi.py  test_goal_oriented.py  test_hooks.py  test_init_e2e.py  test_kit_pipeline.py  test_knowledge_provider.py  test_mcp_integration.py  test_memory_provider.py  test_onboarding_apply.py  (+11 more)
(+188 files in other folders)
