# =============================================================================
# Beddel - Declarative YAML-based AI Workflow Engine SDK
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "beddel"
version = "0.1.0"
description = "Declarative YAML-based AI workflow engine SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Beddel Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://beddel.com.br"
Repository = "https://github.com/botanarede/beddel-py"
Documentation = "https://beddel.com.br/docs"
"Bug Tracker" = "https://github.com/botanarede/beddel-py/issues"

[project.optional-dependencies]
adapters = [
    "litellm",
    "opentelemetry-api>=1.0",
    "httpx>=0.27",
]
lite = []  # Alias for core-only install (explicit marker)
all = [
    "beddel[adapters]",
]
dev = [
    "beddel[adapters]",
    "beddel[fastapi]",
    "httpx",
    "opentelemetry-sdk>=1.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "mypy",
]
fastapi = [
    "fastapi",
    "sse-starlette",
]

# -----------------------------------------------------------------------------
# Hatch Build Configuration
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/beddel"]

# -----------------------------------------------------------------------------
# Ruff (Linting + Formatting)
# -----------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["beddel"]

# -----------------------------------------------------------------------------
# Mypy (Type Checking)
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
