# =============================================================================
# Beddel - Declarative YAML-based AI Workflow Engine SDK
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Project Metadata
# -----------------------------------------------------------------------------

[project]
name = "beddel"
version = "0.1.3"
description = "Declarative YAML-based AI workflow engine SDK"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Beddel Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["ai", "workflow", "yaml", "llm", "agent", "sdk", "cli"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://beddel.com.br"
Repository = "https://github.com/botanarede/beddel-py"
Documentation = "https://beddel.com.br/docs"
"Bug Tracker" = "https://github.com/botanarede/beddel-py/issues"

[project.scripts]
beddel = "beddel.cli:main"

[project.optional-dependencies]
adapters = [
    "litellm>=1.40,<1.82.7",
    "opentelemetry-api>=1.0",
    "httpx>=0.27",
]
mcp = [
    "mcp>=1.0",
    "jsonschema>=4.0",
]
lite = []  # Alias for core-only install (explicit marker)
cli = [
    "click>=8.0",
    "beddel[fastapi]",
]
openclaw = [
    "httpx>=0.27",
]
claude = [
    "claude-agent-sdk",
]
all = [
    "beddel[adapters]",
    "beddel[cli]",
    "beddel[mcp]",
    "beddel[openclaw]",
    "beddel[claude]",
]
dev = [
    "beddel[adapters]",
    "beddel[cli]",
    "beddel[fastapi]",
    "beddel[mcp]",
    "beddel[openclaw]",
    "beddel[claude]",
    "httpx",
    "opentelemetry-sdk>=1.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "mypy",
    "types-jsonschema",
]
fastapi = [
    "fastapi",
    "sse-starlette",
]

# -----------------------------------------------------------------------------
# Hatch Build Configuration
# -----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/beddel"]

[tool.hatch.build.targets.sdist]
include = [
    "src/beddel/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# -----------------------------------------------------------------------------
# Ruff (Linting + Formatting)
# -----------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["beddel"]

# -----------------------------------------------------------------------------
# Mypy (Type Checking)
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
